--- a/admin/angular.json
+++ b/admin/angular.json
@@ -27,8 +27,10 @@
               }
             ],
             "styles": [
-              "src/styles.css"
-            ],
+                "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+                "src/styles.css"
+              ],
             "scripts": []
           },
           "configurations": {
@@ -92,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9367b708-eba6-45ef-b7a7-df02619c16b1"
   }
 }
