--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
-    "next": "15.3.1",
-    "react": "^19.0.0",
+    "next": "^15.3.1",
+    "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
