--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 # MONGOOSE_URL = "mongodb+srv://phuvtps26916:phuvtps26916@cluster0.lctkljn.mongodb.net/?retryWrites=true&w=majority"
-MONGOOSE_URL = "mongodb://127.0.0.1:27017/DB_Hotel"
+MONGOOSE_URL = "mongodb+srv://mongoDB_datn:mongoDBthemoon123@cluster0.93nso3o.mongodb.net/DB_Hotel?retryWrites=true&w=majority"
 ACCESS_TOKEN = access_token
 REFRESH_TOKEN = refresh_token
