--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@
 MONGOOSE_URL = "mongodb+srv://mongoDB_datn:mongoDBthemoon123@cluster0.93nso3o.mongodb.net/DB_Hotel?retryWrites=true&w=majority"
 ACCESS_TOKEN = access_token
 REFRESH_TOKEN = refresh_token
+ADMIN_SECRET_KEY = admin_secret_key
