--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
   },
