--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,28 @@
 # MONGOOSE_URL =
 MONGOOSE_URL =
+
+# JWT secret
 ACCESS_TOKEN =
 REFRESH_TOKEN =
 ADMIN_SECRET_KEY =
+
+# Ngrok URL for development
+# Note: Replace with your actual Ngrok URL
+NGROK_URL =
+FRONTEND_URL =
+
+# VNPAY payment configuration
+VNPAY_TMNCODE =
+VNPAY_HASH_SECRET =
+VNPAY_API_URL =
+VN_PAY_HOST =
+VNPAY_QUERY_DR_REFUND_HOST =
+VNPAY_LOCALE =
+VNPAY_TEST_MODE =
+
+# Momo payment configuration
+MOMO_ACCESS_KEY =
+MOMO_SECRET_KEY =
+MOMO_API_URL =
+MOMO_PARTNER_CODE =
+MOMO_LOCALE =
