--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "generate-env-example": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
