--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
