--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,9 @@
     "swiper": "^11.2.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.1",
+    "@types/react": "19.1.8",
     "@types/react-dom": "^19",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
