--- a/admin/angular.json
+++ b/admin/angular.json
@@ -16,19 +16,14 @@
             "outputPath": "dist/admin-hotel",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/assets/css/bootstrap.min.css",
               "src/assets/css/demo.css",
-              "src/assets/css/fonts.css",
-              "src/assets/css/fonts.min.css",
+            
               "src/assets/css/kaiadmin.css",
               "src/assets/css/kaiadmin.min.css",
               "src/assets/css/plugins.css",
@@ -79,10 +74,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -90,9 +82,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         }
