--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "@fullcalendar/angular": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "fullcalendar": "^6.1.17",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
