--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.18.1",
+    "motion": "^12.18.1",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
@@ -20,6 +23,9 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
