--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
+    "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
     "swiper": "^11.2.8"
   },
