--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "animate.css": "^4.1.1",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
@@ -25,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
     "swiper": "^11.2.8"
