--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "@reduxjs/toolkit": "^2.8.2",
     "animate.css": "^4.1.1",
     "axios": "^1.10.0",
@@ -16,6 +18,7 @@
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.18.1",
+    "lucide-react": "^0.517.0",
     "motion": "^12.18.1",
     "next": "^15.3.2",
     "react": "^19.1.0",
