--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/react": "^2.2.5",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@reduxjs/toolkit": "^2.8.2",
@@ -20,7 +22,7 @@
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.517.0",
     "motion": "^12.18.1",
-    "next": "^15.3.2",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-date-range": "^2.0.1",
