--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.517.0",
     "motion": "^12.18.1",
     "next": "^15.3.4",
+    "rc-slider": "^11.1.8",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-date-range": "^2.0.1",
