--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@reduxjs/toolkit": "^2.8.2",
@@ -39,6 +43,9 @@
     "@types/node": "20.19.1",
     "@types/react": "19.1.8",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
     "typescript": "5.8.3"
   }
 }
