--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
