--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
+    "sweetalert2": "^11.22.1",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
