Refactor and enhance discount system and models
Refactored discount controller and routes for improved structure and maintainability. Updated the discount model to support new types, flexible conditions, stacking, and priorities. Added user level to the user model. Introduced a discount service for calculating applicable discounts and previewing booking prices. Added optional token verification middleware. Integrated date-fns for date calculations.

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "generate-env-example": "^1.1.0",
