--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fuse.js": "^7.1.0",
     "generate-env-example": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
