--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^4.2.0",
     "nodemailer": "^7.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
