--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,14 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "fuse.js": "^7.1.0",
     "generate-env-example": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "node-cache": "^5.1.2",
     "node-cron": "^4.2.0",
     "nodemailer": "^7.0.3",
     "swagger-jsdoc": "^6.2.8",
