--- a/admin/angular.json
+++ b/admin/angular.json
@@ -20,6 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/ngx-toastr/toastr.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/assets/css/bootstrap.min.css",
               "src/assets/css/demo.css",
@@ -88,7 +89,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles.css","node_modules/ngx-toastr/toastr.css"],
             "scripts": []
           }
         }
