--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "@fullcalendar/angular": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
+    "bootstrap-icons": "^1.13.1",
     "fullcalendar": "^6.1.17",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^19.0.0",
