Refactor image URL handling and improve Gemini suggestions
Introduced a getImageUrl utility to standardize image URL generation across frontend components, replacing hardcoded URLs. Enhanced Gemini suggestion logic in backend to improve prompt formatting, error handling, and result parsing. Updated .env.example with more configuration options and comments. Minor code cleanups and UI improvements, including grid layout for service list and replacing anchor tags with Link components.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 # MONGOOSE_URL =
 MONGOOSE_URL =
+BASE_URL =
 
 # JWT secret
+## Note: Replace with your actual JWT secret
 ACCESS_TOKEN =
 REFRESH_TOKEN =
 ADMIN_SECRET_KEY =
@@ -12,6 +14,7 @@ NGROK_URL =
 FRONTEND_URL =
 
 # VNPAY payment configuration
+## Note: Replace with your actual VNPAY configuration
 VNPAY_TMNCODE =
 VNPAY_HASH_SECRET =
 VNPAY_API_URL =
@@ -21,8 +24,33 @@ VNPAY_LOCALE =
 VNPAY_TEST_MODE =
 
 # Momo payment configuration
+## Note: Replace with your actual Momo configuration
 MOMO_ACCESS_KEY =
 MOMO_SECRET_KEY =
 MOMO_API_URL =
 MOMO_PARTNER_CODE =
 MOMO_LOCALE =
+
+# ZaloPay payment configuration
+## Note: Replace with your actual ZaloPay configuration
+ZALOPAY_APP_ID =
+ZALOPAY_KEY1 =
+ZALOPAY_KEY2 =
+ZALOPAY_API_URL =
+ZALOPAY_QUERY_API_URL =
+ZALOPAY_PARTNER_CODE =
+ZALOPAY_LOCALE =
+
+# SMTP configuration
+## Note: Replace with your actual SMTP configuration
+LOGO_URL =
+COMPANY_NAME =
+SMTP_HOST =
+SMTP_PORT =
+SMTP_SECURE =
+SMTP_USER =
+SMTP_PASSWORD =
+
+# GEMINI configuration
+## Note: Replace with your actual Gemini configuration
+GEMINI_API_KEY =
