--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,15 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "express-session": "^1.18.2",
     "fuse.js": "^7.1.0",
     "generate-env-example": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +34,8 @@
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.0",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
