--- a/admin/angular.json
+++ b/admin/angular.json
@@ -20,6 +20,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/ngx-spinner/animations/ball-climbing-dot.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/assets/css/bootstrap.min.css",
@@ -89,7 +91,19 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css","node_modules/ngx-toastr/toastr.css"],
+            "styles": [
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/demo.css",
+
+              "src/assets/css/kaiadmin.css",
+              "src/assets/css/kaiadmin.min.css",
+              "src/assets/css/plugins.css",
+              "src/assets/css/plugins.min.css",
+              "src/styles.css"
+            ],
             "scripts": []
           }
         }
