--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
     "browser-image-compression": "^2.0.2",
     "fullcalendar": "^6.1.17",
     "ngx-pagination": "^6.0.3",
+    "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
