--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,8 @@
     "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.22.1",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/node": "20.19.1",
