Update payment config to use BACKEND_URL env var
Replaced NGROK_URL with BACKEND_URL in payment configuration for callback and notify URLs. Updated .env.example to include BACKEND_URL, ADMIN_URL, and other new environment variables. Added a console log for BACKEND_URL in index.js for debugging.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,16 @@
 # MONGOOSE_URL =
 MONGOOSE_URL =
 BASE_URL =
+NODE_ENV =
+
+# GOOGLE
+GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_SECRET =
+
+# CLOUDINARY
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
 # JWT secret
 ## Note: Replace with your actual JWT secret
@@ -8,10 +18,11 @@ ACCESS_TOKEN =
 REFRESH_TOKEN =
 ADMIN_SECRET_KEY =
 
-# Ngrok URL for development
-# Note: Replace with your actual Ngrok URL
-NGROK_URL =
+# Application URLs
+## Note: Replace with your actual application URLs
+BACKEND_URL =
 FRONTEND_URL =
+ADMIN_URL =
 
 # VNPAY payment configuration
 ## Note: Replace with your actual VNPAY configuration
