--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "node-cron": "^4.2.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
