--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.22.1",
     "swiper": "^11.2.8",
+    "swr": "^2.3.4",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
