Add dashboard and statistics components to admin panel
Introduced new dashboard, booking statistics, and cancel rate components with corresponding services and routes. Integrated Chart.js and ng-apexcharts for data visualization. Updated discount logic to handle null promo codes. Refactored home component to use new dashboard widgets and charts. Added backend support for dashboard data via new controller and route.

--- a/admin/package.json
+++ b/admin/package.json
@@ -21,9 +21,12 @@
     "@fullcalendar/angular": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
+    "apexcharts": "^3.54.1",
     "bootstrap-icons": "^1.13.1",
     "browser-image-compression": "^2.0.2",
+    "chart.js": "^4.5.0",
     "fullcalendar": "^6.1.17",
+    "ng-apexcharts": "^1.7.4",
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^19.0.0",
     "ngx-toastr": "^19.0.0",
