--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.18.2",
     "fuse.js": "^7.1.0",
     "generate-env-example": "^1.1.0",
+    "jsonrepair": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
