--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,9 @@
     "@tailwindcss/postcss": "^4.1.10",
     "animate.css": "^4.1.1",
     "axios": "^1.10.0",
-    "bootstrap": "^5.3.6",
+    "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.517.0",
@@ -51,6 +52,7 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "20.19.1",
     "@types/qs": "^6.14.0",
     "@types/react": "19.1.8",
