--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-bootstrap": "^2.10.9",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
